feat: implement auth endpoints
